Fix the problem with text overlapping other text on the about page

--- a/css/style.css
+++ b/css/style.css
@@ -218,9 +218,8 @@ About Page
 
 main section {
   width: 40%;
-  height: 275px;
   display: inline-block;
-  margin: 0 2.5%;
+  margin: 0 2.5% 20px;
   vertical-align: top;
 }
 
